--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -72,18 +72,18 @@
             <div class="artist">
               <a href="./invitados/faky.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist1.jpg"
                   alt="Invitadas FAKY"
               /></a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Música</p>
                 </div>
                 <div class="titles">
                   FAKY
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     El grupo de pop que más lo está petando en Japón, con doble
                     concierto por primera vez en Europa.
@@ -94,18 +94,18 @@
             <div class="artist">
               <a href="./invitados/kiki.html"
                 ><img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist2.jpg"
                   alt="Invitada Kiki vivi lily"
               /></a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Música</p>
                 </div>
                 <div class="titles">
                   Kiki vivi lily
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     Tendremos a la cantante del hit Blue in Green y unas de las
                     voces en auge de la escena nipona.
@@ -116,19 +116,19 @@
             <div class="artist">
               <a href="./invitados/odashima.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist3.jpg"
                   alt="Invitada Odashima"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Anime</p>
                 </div>
                 <div class="titles">
                   Odashima
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     ¡La directora de animación de My Hero Academia, Hitomi
                     Odashima, visita a los fans españoles!
@@ -141,18 +141,18 @@
               <div class="artist">
                 <a href="./invitados/shirogane.html">
                   <img
-                    id="miniature"
+                    class="miniature"
                     src="../images/artistas/artist4.jpg"
                     alt="Invitada Shirogane"
                 /></a>
                 <div class="text">
-                  <div id="rol">
+                  <div class="rol">
                     <p>Cosplay</p>
                   </div>
                   <div class="titles">
                     Shirogane
                   </div>
-                  <div id="description">
+                  <div class="description">
                     <p>
                       La mundialmente reconocida cosplayer y estilista rusa
                       visitará la capital por primera vez.
@@ -165,18 +165,18 @@
             <div class="artist">
               <a href="./invitados/sukisha.html"
                 ><img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist5.jpg"
                   alt="Invitado Sukisha"
               /></a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Música</p>
                 </div>
                 <div class="titles">
                   SUKISHA
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     ¡El productor y cantante es el gran exponente japonés del
                     lo-fi hip hop, el género de moda en internet!
@@ -188,19 +188,19 @@
             <div class="artist">
               <a href=" ./invitados/laia.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist6.jpg"
                   alt="Invitada Laia Lopéz"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Arte</p>
                 </div>
                 <div class="titles">
                   Laia López
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     Autora de Strawberry Moon y Blue Moon, y una de las artistas
                     nacionales más relevantes del momento.
@@ -214,19 +214,19 @@
             <div class="artist">
               <a href="./invitados/ginny.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist7.jpg"
                   alt="Invitada Ginny Di"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Cosplay</p>
                 </div>
                 <div class="titles">
                   Ginny Di
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     Ginny Di es una cosplayer y youtuber que hace cosplays
                     profesionales, sketches de comedia y música.
@@ -238,19 +238,19 @@
             <div class="artist">
               <a href="./invitados/meowri.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist9.jfif"
                   alt="Invitada Jenna Lynn"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Cosplay</p>
                 </div>
                 <div class="titles">
                   Jenna Lynn
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     Partner de Twitch y cosplayer, Jenna ha enamorado a toda la
                     red.
@@ -262,19 +262,19 @@
             <div class="artist">
               <a href="./invitados/halex.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist8.jpg"
                   alt="Invitada H.Alexander"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Arte</p>
                 </div>
                 <div class="titles">
                   H Alexander
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     La popular ilustradora Hannah Alexander estará firmando sus
                     obras durante el fin de semana.
@@ -288,18 +288,18 @@
             <div class="artist">
               <a href="./invitados/ladybeard.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist10.jpg"
                   alt="Invitado Ladybeard"
               /></a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Música</p>
                 </div>
                 <div class="titles">
                   Lady Beard
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     El famoso vocalista de Deadlift Lolita actúa en exclusiva
                     para nosotros.
@@ -310,18 +310,18 @@
             <div class="artist">
               <a href="./invitados/overwatchvoices.html"
                 ><img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist11.jpg"
                   alt="Invitadas/os voces de Overwatch"
               /></a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Actor</p>
                 </div>
                 <div class="titles">
                   Voces de Overwatch
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     ¡Las voces de tus personajes favoritos de Overwatch, en
                     directo!
@@ -333,19 +333,19 @@
             <div class="artist">
               <a href="./invitados/poltattoo.html">
                 <img
-                  id="miniature"
+                  class="miniature"
                   src="../images/artistas/artist12.jfif"
                   alt="Invitado Pol Tatto"
                 />
               </a>
               <div class="text">
-                <div id="rol">
+                <div class="rol">
                   <p>Arte</p>
                 </div>
                 <div class="titles">
                   Pol Tattoo
                 </div>
-                <div id="description">
+                <div class="description">
                   <p>
                     ¡No te pierdas la oportunidad de ponerte en manos del
                     tatuador más influente del país!
