--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -67,20 +67,20 @@
             <span>Concursos</span>
           </div>
         </div>
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso1.jpg"
             alt="Concurso de Asian Cover Dance"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Cosplay</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Asian Cover Dance
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 Talent show cuyo objetivo es encontrar la mejor performance e
                 imitación nacional de un grupo de KPOP, JPOP o MPOP.
@@ -89,20 +89,20 @@
           </div>
         </div>
 
-        <div class="activity" id="actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso2.jpg"
             alt="Concurso de Pop Culture Hiroshima"
           />
-          <div class="text" id="textRight">
-            <div id="rol">
+          <div class="text">
+            <div class="rol">
               <p>Cosplay</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Pop Culture Hiroshima
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¿Quieres ganar un viaje a Hiroshima haciendo lo que más te
                 gusta? Pop culture Hiroshima es un concurso de cosplay
@@ -113,20 +113,20 @@
             </div>
           </div>
         </div>
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso3.jpg"
             alt="Concurso de Karaoke"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Música</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Karaoke
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¡Demuestra tus dotes musicales en nuestro concurso de karaoke y
                 llévate grandes premios!
@@ -134,20 +134,20 @@
             </div>
           </div>
         </div>
-        <div class="activity" id="actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso4.jpg"
             alt="Concurso de Pasarela Cosplay"
           />
-          <div class="text" id="textRight">
-            <div id="rol">
+          <div class="text">
+            <div class="rol">
               <p>Cosplay</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Pasarela Cosplay
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 Todos los cosplayers estáis invitados a subiros a nuestro
                 escenario individual a hacernos una demostración de vuestro
