--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -66,21 +66,20 @@
             <span>Actividades</span>
           </div>
         </div>
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
-            class="miniature"
-            id="miniature1"
+            class="miniature miniature1"
             src="../images/actividades/activity1.png"
             alt="Actividad de Conciertos"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Música</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Conciertos
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¡Disfruta de la música internacional en directo en exclusiva en
                 Manguca! De 8 a 9 y media en nuestro escenario principal.
@@ -91,21 +90,21 @@
           </div>
         </div>
 
-        <div class="activity" id="actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             id="miniature2"
             src="../images/actividades/activity2.jpg"
             alt="Actividad de Coches tunning temáticos"
           />
-          <div class="text" id="textRight">
-            <div id="rol">
+          <div class="text">
+            <div class="rol">
               <p>Exposición</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Coches tunning temáticos
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 Pásate el último día de Manguca a pasear por el recinto y ver
                 esta maravillosa exposición en exclusiva. Coches con temática
@@ -114,21 +113,20 @@
             </div>
           </div>
         </div>
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
-            class="miniature"
-            id="miniature1"
+            class="miniature miniature1"
             src="../images/actividades/activity3.png"
             alt="Actividad de Torneos"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Juegos</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Torneos
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¿Eres un apasionado de los videojuegos o los juegos de mesa?
                 Seas todo un maestro o si acabas de empezar, estás invitado a
@@ -141,20 +139,20 @@
           </div>
         </div>
 
-        <div class="activity" id="actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             src="../images/actividades/activity6.jpg"
             alt="Actividad de Bodas Otakus"
           />
-          <div class="text" id="textRight">
-            <div id="rol">
+          <div class="text">
+            <div class="rol">
               <p>Social</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Bodas otakus
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¿Sientes que estás muy unido a tu almohada impresa? Entonces, no
                 te pierdas nuestro evento más popular y rompedor: tráela y os
@@ -165,21 +163,20 @@
           </div>
         </div>
 
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
-            class="miniature"
-            id="miniature3"
+            class="miniature miniature3"
             src="../images/actividades/activity7.jpg"
             alt="Actividad de Talleres"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Formación y entretenimiento</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Talleres
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¡No habrá ni un minuto en el que te quedes quieto en esta
                 edición de Manguca! Asiste a nuestros talleres, desde clases
@@ -190,21 +187,21 @@
           </div>
         </div>
 
-        <div class="activity" id="actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             id="miniature4"
             src="../images/actividades/activity8.jpg"
             alt="Actividad de Charlas"
           />
-          <div class="text" id="textRight">
-            <div id="rol">
+          <div class="text">
+            <div class="rol">
               <p>Social</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Charlas
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 Aprende escuchando a nuestros invitados en tu campo favorito. En
                 esta edición contamos con el invitado estrella Nate Gentile, un
@@ -214,21 +211,20 @@
           </div>
         </div>
 
-        <div class="activity" id="actLeft">
+        <div class="activity actLeft">
           <img
-            class="miniature"
-            id="miniature3"
+            class="miniature miniature3"
             src="../images/actividades/activity9.jpg"
             alt="Actividad de Firmas"
           />
           <div class="text">
-            <div id="rol">
+            <div class="rol">
               <p>Social</p>
             </div>
-            <div id="titlesActivity">
+            <div class="titlesActivity">
               Firmas
             </div>
-            <div id="description">
+            <div class="description">
               <p>
                 ¡No te vayas de esta edición de Manguca sin conocer de cerca a
                 tus personalidades favoritas!
