--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -122,64 +122,69 @@
                 </div>
               </article>
             </div>
+            <!-- FOOTER -->
+            <footer>
+              <div class="footer">
+                <div class="about">
+                  <div class="colabout">
+                    <div>
+                      <a
+                        href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                        >Contactar por correo</a
+                      >
+                    </div>
+                    <div>
+                      <a href="../footer/voluntariado.html">Voluntariado</a>
+                    </div>
+                  </div>
+                  <div class="colabout">
+                    <div>
+                      <a href="../footer/torneos.html">Bases de Torneos</a>
+                    </div>
+                    <div>
+                      <a href="../footer/concursos.html">Bases de Concursos</a>
+                    </div>
+                    <div>
+                      <a href="../footer/politica.html"
+                        >Política de privacidad</a
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="contacto">
+                  <div class="contactos">
+                    <img
+                      class="iconos"
+                      src="../../images/iconos/rss.png"
+                      alt="Icono RSS"
+                    />
+                    <img
+                      class="iconos"
+                      src="../../images/iconos/twitter.png"
+                      alt="Icono Twitter"
+                    />
+                    <img
+                      class="iconos"
+                      src="../../images/iconos/facebook.png"
+                      alt="Icono Facebook"
+                    />
+                    <img
+                      class="iconos"
+                      src="../../images/iconos/insta.png"
+                      alt="Icono Instagram"
+                    />
+                  </div>
+                  <p id="copyright">
+                    Manguca &#169; Todos los derechos reservados
+                  </p>
+                </div>
+              </div>
+            </footer>
           </div>
         </div>
       </div>
     </main>
-    <!-- FOOTER -->
-    <footer>
-      <div class="footer">
-        <div class="about">
-          <div class="colabout">
-            <div>
-              <a
-                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                >Contactar por correo</a
-              >
-            </div>
-            <div>
-              <a href="../footer/voluntariado.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../footer/torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="../footer/concursos.html">Bases de Concursos</a>
-            </div>
-            <div>
-              <a href="../footer/politica.html">Política de privacidad</a>
-            </div>
-          </div>
-        </div>
-        <div class="contacto">
-          <div class="contactos">
-            <img
-              class="iconos"
-              src="../../images/iconos/rss.png"
-              alt="Icono RSS"
-            />
-            <img
-              class="iconos"
-              src="../../images/iconos/twitter.png"
-              alt="Icono Twitter"
-            />
-            <img
-              class="iconos"
-              src="../../images/iconos/facebook.png"
-              alt="Icono Facebook"
-            />
-            <img
-              class="iconos"
-              src="../../images/iconos/insta.png"
-              alt="Icono Instagram"
-            />
-          </div>
-          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
-        </div>
-      </div>
-    </footer>
+
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
