--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -69,9 +69,9 @@
         </div>
         <div class="form">
           <form
+            id="form"
             method="post"
-            action="../index.html"
-            onsubmit="return validateForm();"
+            onsubmit="setTimeout(function () { validateForm(); }, 2000); return false;"
           >
             <div class="col">
               <label for="forNombre">Nombre</label>
@@ -191,5 +191,6 @@
     <script src="../js/validacion-formulario.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   </body>
 </html>
