--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -118,6 +118,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/P2DEipI1obI"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
               </article>
