--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -89,6 +89,7 @@
                 <img
                   src="../../images/artistas/artist4-avatar.jpg"
                   alt="Icono Shirogane"
+                  allowfullscreen
                 />
               </div>
               <article>
