--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -120,6 +120,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/KvmmnAmHKVA"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
                 <table>
