--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -38,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a  href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -146,7 +144,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              class="iconos"
+              src="../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               class="iconos"
               src="../images/iconos/twitter.png"
