--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -123,6 +123,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/Um0Yk3ahDCA"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
                 <p>
