--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -123,6 +123,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/QOawH-IZI0U"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
               </article>
