--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -121,6 +121,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/M8-vje-bq9c"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
                 <table>
