--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -132,6 +132,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/0zPVvGoMKdI"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
               </article>
