--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -115,6 +115,7 @@
                   <iframe
                     src="https://www.youtube.com/embed/U8rwdCg8aIc"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
               </article>
