--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
               </div>
             </div>
           </div>
-          <div class="banner">
+          <div class="banner banner-text">
             <a href="./entradas/inscripcion.html"
-              ><h1>¡Consigue ya tu entrada!</h1></a
+              ><p>¡Consigue ya tu entrada!</p></a
             >
           </div>
           <div class="section">
@@ -151,11 +151,12 @@
             </div>
           </div>
           <div class="banner" id="banner2">
-            <div>
-              <h1>
+            <div class="banner-text">
+              <p>
                 Estamos en:
-              </h1>
+              </p>
             </div>
+
             <div class="column2">
               <h3>Complejo Deportivo</h3>
               <span> Universidad de Cádiz </span><br />
