--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
               </div>
             </div>
           </div>
-          <div class="banner banner-text">
+          <div class="banner ">
             <a href="./entradas/inscripcion.html"
-              ><p>¡Consigue ya tu entrada!</p></a
+              ><h1>¡Consigue ya tu entrada!</h1></a
             >
           </div>
           <div class="section">
@@ -151,10 +151,10 @@
             </div>
           </div>
           <div class="banner" id="banner2">
-            <div class="banner-text">
-              <p>
+            <div>
+              <h1>
                 Estamos en:
-              </p>
+              </h1>
             </div>
 
             <div class="column2">
