--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -284,7 +284,7 @@
             </div>
           </div>
 
-          <div>
+          <div id="last">
             <div class="artist">
               <a href="./invitados/ladybeard.html">
                 <img
