--- a/informacion/footer/voluntariado.html
+++ b/informacion/footer/voluntariado.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="content">
-          <article>
+          <article class="style">
             <h1>
               Información
             </h1>
@@ -105,7 +105,7 @@
               </li>
             </ul>
           </article>
-          <article>
+          <article class="style">
             <h1>
               Inscripción
             </h1>
