--- a/informacion/noticias/noticia2.html
+++ b/informacion/noticias/noticia2.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="content">
+        <div class="content style">
           <article>
             <h1>BTS aplaza su gira por España</h1>
             <div class="iframe">
