--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="content">
-          <article>
+          <article class="style">
             <h1>
               Información del recinto
             </h1>
@@ -85,7 +85,7 @@
               emblemático con unas vistas panorámicas únicas.
             </p>
           </article>
-          <article>
+          <article class="style">
             <h1>
               Medios de transporte disponibles
             </h1>
@@ -100,7 +100,7 @@
               </li>
             </ul>
           </article>
-          <article>
+          <article class="style">
             <h1>
               Mapa del recinto
             </h1>
