--- a/informacion/noticias/noticia1.html
+++ b/informacion/noticias/noticia1.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="content">
+        <div class="content style">
           <article>
             <h1>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</h1>
             <div class="iframe">
