--- a/informacion/noticias/noticia3.html
+++ b/informacion/noticias/noticia3.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="content">
+        <div class="content style">
           <article>
             <h1>Nuevo juego de Magic: RPG Magic Legends</h1>
             <div class="iframe">
