--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
           </div>
         </div>
         <aside class="news">
+          <div class="title">
+            <!--texto-->
+            <h1>Noticias</h1>
+          </div>
           <div class="new">
             <a href="./informacion/noticias/noticia1.html"
               ><img
