--- a/index.html
+++ b/index.html
@@ -174,37 +174,39 @@
             <!--texto-->
             <h1>Noticias</h1>
           </div>
-          <div class="new">
-            <a href="./informacion/noticias/noticia1.html"
-              ><img
-                class="miniature"
-                src="./images/noticias/noticia1.jpg"
-                alt="Noticia Hiroshi Masuoka"
-            /></a>
-            <div class="description">
-              <p>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</p>
+          <div class="newsbox">
+            <div class="new">
+              <a href="./informacion/noticias/noticia1.html"
+                ><img
+                  class="miniature"
+                  src="./images/noticias/noticia1.jpg"
+                  alt="Noticia Hiroshi Masuoka"
+              /></a>
+              <div class="description">
+                <p>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</p>
+              </div>
             </div>
-          </div>
-          <div class="new">
-            <a href="./informacion/noticias/noticia2.html"
-              ><img
-                class="miniature"
-                src="./images/noticias/noticia2.jpg"
-                alt="Noticia BTS"
-            /></a>
-            <div class="description">
-              <p>BTS aplaza su gira por España</p>
+            <div class="new">
+              <a href="./informacion/noticias/noticia2.html"
+                ><img
+                  class="miniature"
+                  src="./images/noticias/noticia2.jpg"
+                  alt="Noticia BTS"
+              /></a>
+              <div class="description">
+                <p>BTS aplaza su gira por España</p>
+              </div>
             </div>
-          </div>
-          <div class="new">
-            <a href="./informacion/noticias/noticia3.html"
-              ><img
-                class="miniature"
-                src="./images/noticias/noticia3.jpg"
-                alt="Noticia RPG Magic Legends"
-            /></a>
-            <div class="description">
-              <p>Nuevo juego de Magic: RPG Magic Legends</p>
+            <div class="new">
+              <a href="./informacion/noticias/noticia3.html"
+                ><img
+                  class="miniature"
+                  src="./images/noticias/noticia3.jpg"
+                  alt="Noticia RPG Magic Legends"
+              /></a>
+              <div class="description">
+                <p>Nuevo juego de Magic: RPG Magic Legends</p>
+              </div>
             </div>
           </div>
         </aside>
