--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <p>BTS aplaza su gira por España</p>
               </div>
             </div>
-            <div class="new">
+            <div class="new" id="last">
               <a href="./informacion/noticias/noticia3.html"
                 ><img
                   class="miniature"
