--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="artists">
-          <div>
+          <div class="row">
             <div class="artist">
               <a href="./invitados/faky.html">
                 <img
@@ -137,7 +137,7 @@
               </div>
             </div>
 
-            <div>
+            <div class="row">
               <div class="artist">
                 <a href="./invitados/shirogane.html">
                   <img
@@ -210,7 +210,7 @@
             </div>
           </div>
 
-          <div>
+          <div class="row">
             <div class="artist">
               <a href="./invitados/ginny.html">
                 <img
@@ -284,7 +284,7 @@
             </div>
           </div>
 
-          <div id="last">
+          <div class="row" id="last">
             <div class="artist">
               <a href="./invitados/ladybeard.html">
                 <img
